# Backend

./: .env  .env.example  .gitignore  API_USAGE.md  ARCHITECTURE.md  README.md  config.yaml  curls.txt  databases.py  http_handler.py  implementation_plan.md  main.py  main_backend.py  pyproject.toml  requirements.txt  run_server.py  run_testing_server.py  server.py  test_authorization.py  test_request.py  util.py
.github/workflows/: tests.yml
ML/: .gitignore  API_USAGE.md  ARCHITECTURE.md  README.md  api_server.py  config.yaml  main.py  main_ml.py  model.py  pyproject.toml  requirements.txt  run_server_ml.py  server.py  server_ml.py
ML/configs/: active_config.yaml  custom_config.yaml  gpt2_config.yaml
ML/src/: __init__.py  config_manager.py  input_handler.py  logger.py  model_downloader.py  model_manager.py  signal_handler.py
ML/tests/: start_test_server_ml.py  test_ask_ai.py
configs/: default.yaml  default_config.json  production.yaml  testing.yaml  testing_config.json
logs/: loggers.py
safety/: encryptors.py
src/: config_manager.py  database_manager.py  main.py
src/core/: config_manager.py  constants.py  database.py  database_manager.py  prompts.py  server.py
src/docker_builder/: Dockerfile.flutter_web  __init__.py  builder.py  cli.py
src/models/: config.py  orm.py  schemas.py
src/security/: __init__.py  auth_middleware.py  dependencies.py  encryptors.py
src/services/: __init__.py  archive_service.py  audit_orchestrator.py  file_processor.py  github_service.py  orchestration_service.py
src/utils/: exceptions.py  helpers.py  logger.py  validators.py
tests/: README.md  conftest.py  run_all_tests.py  start_test_server.py  test_authorization.py  test_health_check.py  test_log.py  test_me.py  test_sign_in.py  test_sign_up.py  test_submit.py  test_utils.py  utils_for_tests.py
